# kuka-slicer

./: .gitattributes  .gitignore  EXTERNAL_CODEX_HANDOFF.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/external_npz_preprocessor/source_npz_templates/: two_layer_rf_template.npz
data/input_gcode/: CFFFP_single_lug_connector_thickness_5mm.gcode  resin_test_0710.npz  single_lug_connector_thickness_5mm_source.npz
data/input_gcode/100_10_cylinder/: 100_10_cylinder_source.npz
data/input_gcode/cylinder_test/: cylinder_test_100_50_first10layers.gcode
data/input_gcode/i/: one_layer_resin_fiber_100mm_square.npz
data/input_gcode/split_test0210/: test0210_layer_0001.gcode
data/input_gcode/test_0325/: test0325.gcode
data/input_gcode/test_0628/: t_628.gcode
design-plans/: compact-model-slicing-workspace.md
docs/: external_source_npz_format.md  prusaslicer_migration_plan.md  pyslm_kernel_architecture.md
docs/audit/: SEPARATION_PROPOSAL.md  SOURCE_INVENTORY.md  TEST_BASELINE.md
docs/superpowers/specs/: 2026-06-21-test-mode-fiber-design.md  2026-07-15-print-time-estimate-design.md  2026-07-16-per-path-extrude-reset-prime-settle-design.md
handoff/: GOLDEN_SHA256SUMS
handoff/golden/: external-template-system.offset.json
kuka_slicer/: __init__.py  cli.py  external_npz.py  pyslm_backend.py  slicer.py  stl_io.py  ui_server.py
scripts/: estimate_npz_rows.py  plot_npz_xy.py  split_gcode_by_layer.py
src/my_project/external_npz_preprocessor/: package.xml
src/my_project/gcode_planner/: package.xml
src/my_project/path_processing_core/: setup.py
tests/: test_distribution.py  test_external_npz.py  test_package_boundaries.py  test_pyslm_backend.py  test_slicer.py
(+18 files in other folders)
