[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kuka-slicer"
version = "0.1.0"
description = "STL to external source NPZ slicer for KUKA path preprocessing"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = ["numpy>=1.24", "shapely>=2.0"]

[project.optional-dependencies]
test = ["pytest>=7"]
pyslm = ["PythonSLM==0.6.1"]

[project.scripts]
kuka-slicer = "kuka_slicer.cli:main"

[tool.setuptools.packages.find]
include = ["kuka_slicer*"]
