[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kuka-slicer"
version = "0.2.0"
description = "STL to external source NPZ slicer for KUKA path preprocessing"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{name = "Jayson-Bai"}]
keywords = ["3d-printing", "kuka", "slicer", "stl", "toolpath"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.24", "shapely>=2.0"]

[project.optional-dependencies]
test = ["pytest>=7"]
pyslm = ["PythonSLM==0.6.1"]

[project.scripts]
kuka-slicer = "kuka_slicer.cli:main"

[project.urls]
Repository = "https://github.com/Jayson-Bai/kuka-slicer"
Issues = "https://github.com/Jayson-Bai/kuka-slicer/issues"

[tool.setuptools.packages.find]
include = ["kuka_slicer*"]
